# libbsc

./: CMakeLists.txt
cmake/: FindOpenMP.cmake  absls.cmake
